// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`mutations in trx create trx 1`] = `
"mutation($MutationTransactionOptions_0: MutationTransactionOptions, $AuthorCreateInput_1: AuthorCreateInput!) {
	mut: transaction(options: $MutationTransactionOptions_0) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
		mut: createAuthor(data: $AuthorCreateInput_1) {
			ok
			errorMessage
			errors {
				... MutationError
			}
			validation {
				... ValidationResult
			}
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations in trx create trx 2`] = `
{
  "AuthorCreateInput_1": {
    "email": "xx@localhost",
    "name": "John",
  },
  "MutationTransactionOptions_0": {},
}
`;

exports[`mutations in trx mutation with a node 1`] = `
"mutation($MutationTransactionOptions_0: MutationTransactionOptions, $AuthorCreateInput_1: AuthorCreateInput!) {
	mut: transaction(options: $MutationTransactionOptions_0) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
		mut: createAuthor(data: $AuthorCreateInput_1) {
			ok
			errorMessage
			errors {
				... MutationError
			}
			validation {
				... ValidationResult
			}
			node {
				id
			}
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations in trx mutation with a node 2`] = `
{
  "AuthorCreateInput_1": {
    "email": "xx@localhost",
    "name": "John",
  },
  "MutationTransactionOptions_0": {},
}
`;

exports[`mutations in trx update 1`] = `
"mutation($MutationTransactionOptions_0: MutationTransactionOptions, $AuthorUniqueWhere_1: AuthorUniqueWhere!, $AuthorUpdateInput_2: AuthorUpdateInput!) {
	mut: transaction(options: $MutationTransactionOptions_0) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
		mut: updateAuthor(by: $AuthorUniqueWhere_1, data: $AuthorUpdateInput_2) {
			ok
			errorMessage
			errors {
				... MutationError
			}
			validation {
				... ValidationResult
			}
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations in trx update 2`] = `
{
  "AuthorUniqueWhere_1": {
    "id": "ca7a9b84-efbb-435d-a063-da11f205335a",
  },
  "AuthorUpdateInput_2": {
    "email": "xx@localhost",
    "name": "John",
  },
  "MutationTransactionOptions_0": {},
}
`;

exports[`mutations in trx delete 1`] = `
"mutation($MutationTransactionOptions_0: MutationTransactionOptions, $AuthorUniqueWhere_1: AuthorUniqueWhere!) {
	mut: transaction(options: $MutationTransactionOptions_0) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
		mut: deleteAuthor(by: $AuthorUniqueWhere_1) {
			ok
			errorMessage
			errors {
				... MutationError
			}
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations in trx delete 2`] = `
{
  "AuthorUniqueWhere_1": {
    "id": "ca7a9b84-efbb-435d-a063-da11f205335a",
  },
  "MutationTransactionOptions_0": {},
}
`;

exports[`mutations in trx upsert 1`] = `
"mutation($MutationTransactionOptions_0: MutationTransactionOptions, $AuthorUniqueWhere_1: AuthorUniqueWhere!, $AuthorCreateInput_2: AuthorCreateInput!, $AuthorUpdateInput_3: AuthorUpdateInput!) {
	mut: transaction(options: $MutationTransactionOptions_0) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
		mut: upsertAuthor(by: $AuthorUniqueWhere_1, create: $AuthorCreateInput_2, update: $AuthorUpdateInput_3) {
			ok
			errorMessage
			errors {
				... MutationError
			}
			validation {
				... ValidationResult
			}
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations in trx upsert 2`] = `
{
  "AuthorCreateInput_2": {
    "email": "xx@localhost",
    "name": "John",
  },
  "AuthorUniqueWhere_1": {
    "id": "ca7a9b84-efbb-435d-a063-da11f205335a",
  },
  "AuthorUpdateInput_3": {
    "email": "xx@localhost",
    "name": "John",
  },
  "MutationTransactionOptions_0": {},
}
`;

exports[`mutations in trx multiple mutations as array 1`] = `
"mutation($MutationTransactionOptions_0: MutationTransactionOptions, $AuthorCreateInput_1: AuthorCreateInput!, $AuthorCreateInput_2: AuthorCreateInput!) {
	mut: transaction(options: $MutationTransactionOptions_0) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
		mut_0: createAuthor(data: $AuthorCreateInput_1) {
			ok
			errorMessage
			errors {
				... MutationError
			}
			validation {
				... ValidationResult
			}
		}
		mut_1: createAuthor(data: $AuthorCreateInput_2) {
			ok
			errorMessage
			errors {
				... MutationError
			}
			validation {
				... ValidationResult
			}
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations in trx multiple mutations as array: 
			{
			  "AuthorCreateInput_1": {
			    "email": "xx@localhost",
			    "name": "John",
			  },
			  "AuthorCreateInput_2": {
			    "email": "xx@localhost",
			    "name": "John",
			  },
			  "MutationTransactionOptions_0": {},
			}
		 1`] = `
{
  "AuthorCreateInput_1": {
    "email": "xx@localhost",
    "name": "John",
  },
  "AuthorCreateInput_2": {
    "email": "xx@localhost",
    "name": "John",
  },
  "MutationTransactionOptions_0": {},
}
`;

exports[`mutations in trx multiple named mutations trx: 
			"mutation($MutationTransactionOptions_0: MutationTransactionOptions, $AuthorCreateInput_1: AuthorCreateInput!, $PostCreateInput_2: PostCreateInput!) {
				mut: transaction(options: $MutationTransactionOptions_0) {
					ok
					errorMessage
					errors {
						... MutationError
					}
					validation {
						... ValidationResult
					}
					createAuthor(data: $AuthorCreateInput_1) {
						ok
						errorMessage
						errors {
							... MutationError
						}
						validation {
							... ValidationResult
						}
					}
					createPost(data: $PostCreateInput_2) {
						ok
						errorMessage
						errors {
							... MutationError
						}
						validation {
							... ValidationResult
						}
					}
				}
			}
			fragment MutationError on _MutationError {
				paths {
					... on _FieldPathFragment {
						field
					}
					... on _IndexPathFragment {
						index
						alias
					}
				}
				message
				type
			}
			fragment ValidationResult on _ValidationResult {
				valid
				errors {
					path {
						... on _FieldPathFragment {
							field
						}
						... on _IndexPathFragment {
							index
							alias
						}
					}
					message {
						text
					}
				}
			}
			"
		 1`] = `
"mutation($MutationTransactionOptions_0: MutationTransactionOptions, $AuthorCreateInput_1: AuthorCreateInput!, $PostCreateInput_2: PostCreateInput!) {
	mut: transaction(options: $MutationTransactionOptions_0) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
		createAuthor(data: $AuthorCreateInput_1) {
			ok
			errorMessage
			errors {
				... MutationError
			}
			validation {
				... ValidationResult
			}
		}
		createPost(data: $PostCreateInput_2) {
			ok
			errorMessage
			errors {
				... MutationError
			}
			validation {
				... ValidationResult
			}
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations in trx multiple named mutations trx: 
			{
			  "AuthorCreateInput_1": {
			    "email": "xx@localhost",
			    "name": "John",
			  },
			  "MutationTransactionOptions_0": {},
			  "PostCreateInput_2": {
			    "publishedAt": "now",
			  },
			}
		 1`] = `
{
  "AuthorCreateInput_1": {
    "email": "xx@localhost",
    "name": "John",
  },
  "MutationTransactionOptions_0": {},
  "PostCreateInput_2": {
    "publishedAt": "now",
  },
}
`;

exports[`mutations in trx mutation and query combo trx 1`] = `
"mutation($MutationTransactionOptions_0: MutationTransactionOptions, $PostCreateInput_1: PostCreateInput!, $PostUniqueWhere_2: PostUniqueWhere!) {
	mut: transaction(options: $MutationTransactionOptions_0) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
		createPost(data: $PostCreateInput_1) {
			ok
			errorMessage
			errors {
				... MutationError
			}
			validation {
				... ValidationResult
			}
		}
		post: query {
			value: getPost(by: $PostUniqueWhere_2) {
				id
				publishedAt
				status
			}
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations in trx mutation and query combo trx 2`] = `
{
  "MutationTransactionOptions_0": {},
  "PostCreateInput_1": {
    "publishedAt": "now",
  },
  "PostUniqueWhere_2": {
    "id": "ca7a9b84-efbb-435d-a063-da11f205335a",
  },
}
`;

exports[`mutations without trx create 1`] = `
"mutation($AuthorCreateInput_0: AuthorCreateInput!) {
	mut: createAuthor(data: $AuthorCreateInput_0) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations without trx create 2`] = `
{
  "AuthorCreateInput_0": {
    "email": "xx@localhost",
    "name": "John",
  },
}
`;

exports[`mutations without trx mutation with a node 1`] = `
"mutation($AuthorCreateInput_0: AuthorCreateInput!) {
	mut: createAuthor(data: $AuthorCreateInput_0) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
		node {
			id
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations without trx mutation with a node 2`] = `
{
  "AuthorCreateInput_0": {
    "email": "xx@localhost",
    "name": "John",
  },
}
`;

exports[`mutations without trx update 1`] = `
"mutation($AuthorUniqueWhere_0: AuthorUniqueWhere!, $AuthorUpdateInput_1: AuthorUpdateInput!) {
	mut: updateAuthor(by: $AuthorUniqueWhere_0, data: $AuthorUpdateInput_1) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations without trx update 2`] = `
{
  "AuthorUniqueWhere_0": {
    "id": "ca7a9b84-efbb-435d-a063-da11f205335a",
  },
  "AuthorUpdateInput_1": {
    "email": "xx@localhost",
    "name": "John",
  },
}
`;

exports[`mutations without trx delete 1`] = `
"mutation($AuthorUniqueWhere_0: AuthorUniqueWhere!) {
	mut: deleteAuthor(by: $AuthorUniqueWhere_0) {
		ok
		errorMessage
		errors {
			... MutationError
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
"
`;

exports[`mutations without trx delete 2`] = `
{
  "AuthorUniqueWhere_0": {
    "id": "ca7a9b84-efbb-435d-a063-da11f205335a",
  },
}
`;

exports[`mutations without trx upsert 1`] = `
"mutation($AuthorUniqueWhere_0: AuthorUniqueWhere!, $AuthorCreateInput_1: AuthorCreateInput!, $AuthorUpdateInput_2: AuthorUpdateInput!) {
	mut: upsertAuthor(by: $AuthorUniqueWhere_0, create: $AuthorCreateInput_1, update: $AuthorUpdateInput_2) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations without trx upsert 2`] = `
{
  "AuthorCreateInput_1": {
    "email": "xx@localhost",
    "name": "John",
  },
  "AuthorUniqueWhere_0": {
    "id": "ca7a9b84-efbb-435d-a063-da11f205335a",
  },
  "AuthorUpdateInput_2": {
    "email": "xx@localhost",
    "name": "John",
  },
}
`;

exports[`mutations without trx multiple mutations as array 1`] = `
"mutation($AuthorCreateInput_0: AuthorCreateInput!, $AuthorCreateInput_1: AuthorCreateInput!) {
	mut_0: createAuthor(data: $AuthorCreateInput_0) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
	}
	mut_1: createAuthor(data: $AuthorCreateInput_1) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations without trx multiple mutations as array 2`] = `
{
  "AuthorCreateInput_0": {
    "email": "xx@localhost",
    "name": "John",
  },
  "AuthorCreateInput_1": {
    "email": "xx@localhost",
    "name": "John",
  },
}
`;

exports[`mutations without trx multiple named mutations 1`] = `
"mutation($AuthorCreateInput_0: AuthorCreateInput!, $PostCreateInput_1: PostCreateInput!) {
	createAuthor(data: $AuthorCreateInput_0) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
	}
	createPost(data: $PostCreateInput_1) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations without trx multiple named mutations 2`] = `
{
  "AuthorCreateInput_0": {
    "email": "xx@localhost",
    "name": "John",
  },
  "PostCreateInput_1": {
    "publishedAt": "now",
  },
}
`;

exports[`mutations without trx mutation and query combo 1`] = `
"mutation($PostCreateInput_0: PostCreateInput!, $PostUniqueWhere_1: PostUniqueWhere!) {
	createPost(data: $PostCreateInput_0) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
	}
	post: query {
		value: getPost(by: $PostUniqueWhere_1) {
			id
			publishedAt
			status
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations without trx mutation and query combo 2`] = `
{
  "PostCreateInput_0": {
    "publishedAt": "now",
  },
  "PostUniqueWhere_1": {
    "id": "ca7a9b84-efbb-435d-a063-da11f205335a",
  },
}
`;

exports[`mutations without trx update locale relation 1`] = `
"mutation($PostUniqueWhere_0: PostUniqueWhere!, $PostUpdateInput_1: PostUpdateInput!) {
	mut: updatePost(by: $PostUniqueWhere_0, data: $PostUpdateInput_1) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations without trx update locale relation 2`] = `
{
  "PostUniqueWhere_0": {
    "id": "ca7a9b84-efbb-435d-a063-da11f205335a",
  },
  "PostUpdateInput_1": {
    "locales": [
      {
        "update": {
          "by": {
            "locale": {
              "code": "cs",
            },
          },
          "data": {
            "title": "cs title",
          },
        },
      },
    ],
    "publishedAt": "now",
  },
}
`;

exports[`mutations without trx mutate or fail - fail 1`] = `
"mutation($MutationTransactionOptions_0: MutationTransactionOptions, $AuthorCreateInput_1: AuthorCreateInput!) {
	mut: transaction(options: $MutationTransactionOptions_0) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
		mut: createAuthor(data: $AuthorCreateInput_1) {
			ok
			errorMessage
			errors {
				... MutationError
			}
			validation {
				... ValidationResult
			}
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations without trx mutate or fail - fail 2`] = `
{
  "AuthorCreateInput_1": {
    "email": "xx@localhost",
    "name": "John",
  },
  "MutationTransactionOptions_0": {},
}
`;

exports[`mutations without trx mutate or fail - ok 1`] = `
"mutation($MutationTransactionOptions_0: MutationTransactionOptions, $AuthorCreateInput_1: AuthorCreateInput!) {
	mut: transaction(options: $MutationTransactionOptions_0) {
		ok
		errorMessage
		errors {
			... MutationError
		}
		validation {
			... ValidationResult
		}
		mut: createAuthor(data: $AuthorCreateInput_1) {
			ok
			errorMessage
			errors {
				... MutationError
			}
			validation {
				... ValidationResult
			}
		}
	}
}
fragment MutationError on _MutationError {
	paths {
		... on _FieldPathFragment {
			field
		}
		... on _IndexPathFragment {
			index
			alias
		}
	}
	message
	type
}
fragment ValidationResult on _ValidationResult {
	valid
	errors {
		path {
			... on _FieldPathFragment {
				field
			}
			... on _IndexPathFragment {
				index
				alias
			}
		}
		message {
			text
		}
	}
}
"
`;

exports[`mutations without trx mutate or fail - ok 2`] = `
{
  "AuthorCreateInput_1": {
    "email": "xx@localhost",
    "name": "John",
  },
  "MutationTransactionOptions_0": {},
}
`;
